--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,71 @@
-site_name: My Docs
+# Project information
+site_name: NER-Project on Xtreme Dataset PAN-X en
+# defeine TOC or order of website-
+nav:
+  - Home: index.md
+  - Ingestion: Data Ingestion.md
+
+site_author: Akash soni
+site_description: >-
+  DESCRIPTION
+
+# Repository
+repo_name:  akash-soni/NER-Project 
+repo_url: https://github.com/akash-soni/NER-Project 
+
+# Configuration
+theme:
+  name: material
+  features:
+    - navigation.tabs
+    - navigation.sections
+    - toc.integrate
+    - navigation.top
+  language: en
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline 
+        name: Switch to dark mode
+      primary: teal
+      accent: purple 
+    - scheme: slate 
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode    
+      primary: teal
+      accent: lime    
+  # logo: PyTorch_logo_icon.svg
+  
+extra:
+  social:
+    - icon: fontawesome/brands/github-alt
+      link: https://github.com/akash-soni
+    - icon: fontawesome/brands/linkedin
+      link: www.linkedin.com/in/akash-sonii
+
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js #?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - admonition
+  - pymdownx.arithmatex:
+      generic: true
+  - footnotes
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.mark
+  
+  
+plugins:
+  - search
+
+copyright: |
+  &copy; 2022 <a href="https://github.com/akash-soni"  target="_blank" rel="noopener">Akash soni</a>
